--- a/WebTech_PracQ/TextFormatting.html
+++ b/WebTech_PracQ/TextFormatting.html
@@ -8,20 +8,14 @@
     <h2>Text Formatting Tags Example</h2>
 
     <p><b>This is bold text using &lt;b&gt;</b></p>
-    <br>
+    
     <p><strong>This is strong text using &lt;strong&gt;</strong></p>
-    <br>
     <p><i>This is italic text using &lt;i&gt;</i></p>
-    <br>
     <p><em>This is emphasized text using &lt;em&gt;</em></p>
-    <br>
     <p><u>This is underlined text using &lt;u&gt;</u></p>
-    <br>
-
+    <p><mark>This is highlighted text using &lt;mark&gt;</mark></p>
     <p><small>This is small text using &lt;small&gt;</small></p>
-    <br>
     <p>This is <sub>subscript</sub> text using &lt;sub&gt;</p>
-    <br>
     <p>This is <sup>superscript</sup> text using &lt;sup&gt;</p>
 
  
