--- a/WebTech_PracQ/ClientMapping.html
+++ b/WebTech_PracQ/ClientMapping.html
@@ -7,7 +7,7 @@
 
     <h2>Client-Side Image Map</h2>
 
-    <img src="https://via.placeholder.com/400x200" usemap="#clientmap" alt="Map Example">
+    <img src="/" usemap="#clientmap" alt="Map Example">
 
     <map name="clientmap">
         <area shape="rect" coords="0,0,200,100" href="https://www.google.com" alt="Google" target="_blank">
@@ -22,7 +22,7 @@
 
     <!-- Note: "ismap" works only with <a> tag -->
     <a href="servermap.php" target="_blank">
-        <img src="https://via.placeholder.com/400x200" ismap alt="Server Side Map Example">
+        <img src="/" ismap alt="Server Side Map Example">
     </a>
 
     <p>In server-side image map, coordinates are sent to server (e.g., servermap.php?x=150&y=60)</p>
