--- a/WebTech_PracQ/ClientMapping.html
+++ b/WebTech_PracQ/ClientMapping.html
@@ -7,7 +7,7 @@
 
     <h2>Client-Side Image Map</h2>
 
-    <img src="/" usemap="#clientmap" alt="Map Example">
+    <img src="\superman fly.jpg" usemap="#clientmap" alt="Map Example">
 
     <map name="clientmap">
         <area shape="rect" coords="0,0,200,100" href="https://www.google.com" alt="Google" target="_blank">
