--- a/WebTech_PracQ/StudentTable.html
+++ b/WebTech_PracQ/StudentTable.html
@@ -1,46 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Student Records</title>
+    <style>
+        table {
+            border: 1px solid black;
+            border-collapse: collapse;
+            width: 50%;
+            margin: 20px auto;
+        }
+        th, td {
+            border: 1px solid black;
+            padding: 6px;
+            text-align: center;
+        }
+        h2 {
+            text-align: center;
+            font-family: Arial, sans-serif;
+        }
+    </style>
 </head>
 <body>
 
-    <h3>Student Records</h3>
-    <table style="border: 1px solid black; border-collapse: collapse;">
-        <tr>
-            <th style="border: 1px solid black; padding: 8px;">Student ID</th>
-            <th style="border: 1px solid black; padding: 8px;">Student Name</th>
-            <th style="border: 1px solid black; padding: 8px;">Student Age</th>
-            <th style="border: 1px solid black; padding: 8px;">Student Address</th>
-        <th>
-            <tr>
-                <td>Student ID</td>
-                <td>Student Name</td>
-                <td>Student Age</td>
-                <td>Student Address</td>
-            </tr>
-        </th>
+<h2>Student Records</h2>
 
-        <tr>
-            <td>1</td>
-            <td>Sasin Godar</td>
-            <td>21</td>
-            <td>bharatpur</td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>Anuzz Dhakal</td>
-            <td>22</td>
-            <td>Chanaulii</td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>Prabin Thaapa</td>
-            <td>21</td>
-            <td>Gaidakot</td>
-    </table>
-    
+<table>
+    <tr>
+        <th>Roll No</th>
+        <th>Name</th>
+        <th>Class</th>
+        <th>Marks</th>
+    </tr>
+    <tr>
+        <td>1</td>
+        <td>Ram</td>
+        <td>10</td>
+        <td>85</td>
+    </tr>
+    <tr>
+        <td>2</td>
+        <td>Sita</td>
+        <td>10</td>
+        <td>92</td>
+    </tr>
+    <tr>
+        <td>3</td>
+        <td>Hari</td>
+        <td>10</td>
+        <td>76</td>
+    </tr>
+</table>
+
 </body>
 </html>
