--- a/WebTech_PracQ/StudentTable.html
+++ b/WebTech_PracQ/StudentTable.html
@@ -28,26 +28,26 @@
     <tr>
         <th>Roll No</th>
         <th>Name</th>
-        <th>Class</th>
-        <th>Marks</th>
+        <th>Age</th>
+        <th>Address</th>
     </tr>
     <tr>
         <td>1</td>
-        <td>Ram</td>
-        <td>10</td>
-        <td>85</td>
+        <td>Sasin Godar</td>
+        <td>21</td>
+        <td>Chitwan</td>
     </tr>
     <tr>
         <td>2</td>
-        <td>Sita</td>
-        <td>10</td>
-        <td>92</td>
+        <td>Prabin thapa</td>
+        <td>21</td>
+        <td>gaidakot</td>
     </tr>
     <tr>
         <td>3</td>
-        <td>Hari</td>
-        <td>10</td>
-        <td>76</td>
+        <td>Anuzz</td>
+        <td>21</td>
+        <td>Chanauli</td>
     </tr>
 </table>
 
