--- a/WebTech_PracQ/RegistrationForm.html
+++ b/WebTech_PracQ/RegistrationForm.html
@@ -11,26 +11,34 @@
     <form action="#" method="post">
         <label for="name">Full Name:</label>
         <input type="text" id="name" name="name" required>
+        <br>
+        <br>
 
         <label for="email">Email Address:</label>
         <input type="email" id="email" name="email" required>
+        <br>
+        <br>
 
         <label for="phone">Phone Number:</label>
         <input type="tel" id="phone" name="phone">
+        <br>
+        <br>
 
         <label for="gender">Gender:</label>
-        <select id="gender" name="gender">
-            <option value="">--Select--</option>
-            <option value="male">Male</option>
-            <option value="female">Female</option>
-            <option value="other">Other</option>
-        </select>
+       <input type="radio" name="gender" value="male">male
+       <input type="radio" name="gender" value="female">female
+        <br>
+        <br>
 
         <label for="course">Course:</label>
         <input type="text" id="course" name="course">
+        <br>
+        <br>
 
         <label for="dob">Date of Birth:</label>
         <input type="date" id="dob" name="dob">
+        <br>
+        <br>
 
         <input type="submit" value="Register">
     </form>
