--- a/WebTech_PracQ/DifferentCss.html
+++ b/WebTech_PracQ/DifferentCss.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=\, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="DifferentCss.css">
     <style>
     
         p {
@@ -19,6 +20,10 @@
 
     <!--Internal css-->
     <p> This is Internal CSS Example</p>
+
+    <!--External css-->
+
+    <h2> This is External CSS Example</h2>
 
 
     
