--- a/WebTech_PracQ/DifferentCss.html
+++ b/WebTech_PracQ/DifferentCss.html
@@ -10,6 +10,8 @@
         p {
             color: green;
             font-size: 20px;
+            align-items: center;
+            text-align: center;
         }
     </style>
 </head>
