--- a/WebTech_PracQ/ClientMapping.html
+++ b/WebTech_PracQ/ClientMapping.html
@@ -11,13 +11,15 @@
 
     <map name="clientmap">
         <area shape="rect" coords="0,0,200,100" href="https://www.google.com" alt="Google" target="_blank">
-      
     </map>
 
-   
     <hr>
 
+    <h2>Server-Side Image Map</h2>
 
+    <form action="your-server-script.cgi" method="get">
+        <input type="image" src="/WebTech_PracQ/batman wallapper.jpg" name="servermap" alt="Server Map Example" ismap>
+    </form>
 
 </body>
 </html>
