--- a/ExamTable.html
+++ b/ExamTable.html
@@ -7,7 +7,20 @@
 </head>
 <body>
     <table>
-        
+        <tr>
+
+            <th rowspan="2">Students Name</th>
+
+            <th rowspan="2">Address</th>
+
+            <th colspan="2">Phone no</th>
+
+            <th>Student's</th>
+            <th>Parent's</th>
+
+
+
+        </tr>
     </table>
     
 </body>
