--- a/ExamTable.html
+++ b/ExamTable.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TABLE</title>
 </head>
+
 <body>
     <table>
         <tr>
@@ -17,11 +19,22 @@
 
             <th>Student's</th>
             <th>Parent's</th>
+        </tr>
 
-
-
+        <tr>
+            <td>Saroj poudel</td>
+            <td>bnp-2</td>
+            <td>988777</td>
+            <td>98344444</td>
+        </tr>
+        <tr>
+            <td>Amrit poudel</td>
+            <td>bnp-2</td>
+            <td>988777</td>
+            <td>98344444</td>
         </tr>
     </table>
-    
+
 </body>
+
 </html>
