--- a/ExamTable.html
+++ b/ExamTable.html
@@ -17,7 +17,10 @@
 
             <th colspan="2">Phone no</th>
 
-            <th>Student's</th>
+           
+        </tr>
+        <tr>
+             <th>Student's</th>
             <th>Parent's</th>
         </tr>
 
@@ -29,6 +32,18 @@
         </tr>
         <tr>
             <td>Amrit poudel</td>
+            <td>bnp-2</td>
+            <td>988777</td>
+            <td>98344444</td>
+        </tr>
+        <tr>
+            <td>Manish poudel</td>
+            <td>bnp-2</td>
+            <td>988777</td>
+            <td>98344444</td>
+        </tr>
+        <tr>
+            <td>Ankita poudel</td>
             <td>bnp-2</td>
             <td>988777</td>
             <td>98344444</td>
