--- a/ExamTable.html
+++ b/ExamTable.html
@@ -5,10 +5,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TABLE</title>
+    <style>
+        .table {
+            border-style: dotted;
+            border-radius: 1px;
+            border-spacing: 0cap;
+        }
+
+        tr,
+        th,
+        td {
+            align-items: center;
+            justify-content: center;
+            color: blue;
+        }
+    </style>
 </head>
 
 <body>
-    <table border="1px">
+    <table border="1px" class="table">
         <tr>
 
             <th rowspan="2">Students Name</th>
@@ -17,10 +32,10 @@
 
             <th colspan="2">Phone no</th>
 
-           
+
         </tr>
         <tr>
-             <th>Student's</th>
+            <th>Student's</th>
             <th>Parent's</th>
         </tr>
 
