--- a/ExamPractise/Form.html
+++ b/ExamPractise/Form.html
@@ -10,59 +10,44 @@
 <body>
     <form action="action.php" method="post">
 
-        <label for="name">Name</label>
-        <input type="text" placeholder="enter your name" >
-        <br><br>
+          <fieldset style="width: 400px; padding: 20px; border: 2px solid #333;">
+                        <legend>registration form</legend>
 
-        <label for="name">Address</label>
-        <input type="text" placeholder="enter your Address" >
-        <br><br>
+            <label for="name">Name</label>
+            <input type="text" placeholder="enter your name">
+            <br><br>
 
-        <label for="email">Email</label>
-        <input type="email" placeholder="enter your email" >
-        <br><br>
+            <label for="name">Address</label>
+            <input type="text" placeholder="enter your Address">
+            <br><br>
 
-        <label for="phone">Phone no</label>
-        <input type="number" name="phone">
-        <br><br>
+            <label for="email">Email</label>
+            <input type="email" placeholder="enter your email">
+            <br><br>
 
-        <label for="phone">Subject choose</label>
-        <select name="subject" id="subject">Subject
-            <option value="bca">bca</option>
-            <option value="doctor">doctor</option>
-            <option value="bca">doctor</option>
-        </select>
-<br><br>
-        <label for="DOB">DOB</label>
-        <input type="date" name="date" value="dob">
-        <br><br>
+            <label for="phone">Phone no</label>
+            <input type="number" name="phone">
+            <br><br>
 
-        <label for="gender">Gender</label>
-        <input type="radio" name="gender" value="male" id="male">Male
-        <input type="radio" name="gender" value="female" id="femaile">female
-        <br><br>
+            <label for="phone">Subject choose</label>
+            <select name="subject" id="subject">Subject
+                <option value="bca">bca</option>
+                <option value="doctor">doctor</option>
+                <option value="bca">doctor</option>
+            </select>
+            <br><br>
+            <label for="DOB">DOB</label>
+            <input type="date" name="date" value="dob">
+            <br><br>
 
-        <input type="button" name="submit" id="submit" value="Submit">
+            <label for="gender">Gender</label>
+            <input type="radio" name="gender" value="male" id="male">Male
+            <input type="radio" name="gender" value="female" id="femaile">female
+            <br><br>
 
+            <input type="button" name="submit" id="submit" value="Submit">
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        </fieldset>
     </form>
 
 </body>
