--- a/ExamPractise/ImageMapping.html
+++ b/ExamPractise/ImageMapping.html
@@ -34,7 +34,7 @@ Use ismap attribute in <img> tag, and <a href="maphandler.php"> wrapping it. -->
     <a href="www.laptophub">
         <img src="laptop.jpg" alt="laptops" ismap>
     </a>
-    this is the server site
+    this is the server site image mapping 
 
     
 </body>
