--- a/ExamPractise/ImageMapping.html
+++ b/ExamPractise/ImageMapping.html
@@ -36,6 +36,8 @@ Use ismap attribute in <img> tag, and <a href="maphandler.php"> wrapping it. -->
     </a>
     <!-- this is the server site image mapping where the coord are sent to the server and it response to it -->
 
+    image mapping is done
+
     
 </body>
 </html>
